Implement resizable and draggable modals along with bottom sheet functionality in demo application. Updated modal and bottom sheet services to support new features, added corresponding styles, and enhanced app component with new buttons for opening various bottom sheets and a resizable modal.

--- a/angular.json
+++ b/angular.json
@@ -51,7 +51,11 @@
                 "input": "projects/demo/public"
               }
             ],
-            "styles": ["projects/demo/src/styles.css"],
+            "styles": [
+              "projects/demo/src/styles.css",
+              "projects/ngx-portal/src/lib/modal/modal.css",
+              "projects/ngx-portal/src/lib/bottom-sheet/bottom-sheet.css"
+            ],
             "server": "projects/demo/src/main.server.ts",
             "outputMode": "server",
             "ssr": {
