--- a/projects/ngx-portal/package.json
+++ b/projects/ngx-portal/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ngx-portal",
+  "name": "@lukaaaa/ngx-portal",
   "version": "0.0.1",
   "description": "Angular library for modals and bottom sheets with drag-and-drop, resizable, and gesture support",
   "author": "luka lukashinjikashvili84@gmail.com",
