Add dropdown functionality to demo application with new buttons and styles. Updated angular.json to include dropdown styles and modified app component to integrate dropdown examples, enhancing user interaction.

--- a/angular.json
+++ b/angular.json
@@ -54,7 +54,8 @@
             "styles": [
               "projects/demo/src/styles.css",
               "projects/ngx-portal/src/lib/modal/modal.css",
-              "projects/ngx-portal/src/lib/bottom-sheet/bottom-sheet.css"
+              "projects/ngx-portal/src/lib/bottom-sheet/bottom-sheet.css",
+              "projects/ngx-portal/src/lib/drop-down/drop-down.css"
             ],
             "server": "projects/demo/src/main.server.ts",
             "outputMode": "server",
